<resources>
    <string name="app_name">MovieApps</string>

    <string name="on_failure_connect">Can\'t reach server</string>
    <string name="login_success">Login Success</string>
    <string name="register_success">Registration Success</string>
    <string name="edit_success">Update Account Success</string>
    <string name="delete_success">Delete Account Success</string>

    <string name="loading">Loading …</string>
    <string name="logout">Logout Success</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_profile">Profile</string>

    <string name="content_desc">content_desc</string>
    <string name="detail_desc">Overview</string>
    <string name="detail_title">Title</string>
    <string name="detail_rating">8.3</string>
    <string name="detail_release">01 January 2021</string>
    <string name="detail_genres">Action,Comedy,Adventure</string>

    <string name="fragment_home_title">Popular Movie</string>
    <string name="fragment_setting_title">Setting</string>

    <string name="setting_language">Change Language</string>
    <string name="setting_dark_mode">Enable Dark Mode</string>
    <string name="setting_about_header">About Developer</string>
    <string name="setting_about_name">Muhammad Dwi Prasetyo</string>
    <string name="setting_about_id">18.11.2365</string>

    <string name="item_title">Title</string>
    <string name="item_desc">Description</string>
    <string name="item_release">01 January 2021</string>
    <string name="item_rating">8.5</string>

    <string name="title_login">Login</string>
    <string name="title_register">Registration</string>

    <string name="label_email">Email Address</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_avatar">Choose image</string>
    <string name="label_fullname">Fullname</string>

    <string name="btn_login">Sign In</string>
    <string name="btn_register">Sign Up</string>
    <string name="btn_logout">Logout</string>

    <string name="btn_delete_user">Delete Account</string>
    <string name="btn_edit_user">Edit Account</string>

    <string name="btn_link_login">Already have an account? Login here</string>
    <string name="btn_link_register">Don\'t have an account yet? Register here</string>

    <string name="error_msg_empty">Data is Empty</string>
    <string name="error_msg_email">Emails you enter are invalid</string>
    <string name="error_msg_password">Password you enter are invalid</string>
    <string name="error_msg_username">Username you enter are invalid</string>
    <string name="error_msg_fullname">Fullname you enter are invalid</string>

</resources>